# playground

c/unix_sockets/: Makefile  client.c  common.h  server.c
glfw/: CMakeLists.txt  run.sh
glfw/c/: config.h.in  main.c
glfw/c/include/GLFW/src/: init.c
glfw/c/include/glad/: .clang-format
glfw/rust/: Cargo.toml
glfw/rust/src/: main.rs
libinput/: Makefile  input.c
linux_drm/: .gitignore  Makefile  atomic.c  build  compile_commands.json  double_buffering.c  drawing.c  resolution_refresh_rate.c  vsync.c
linux_drm_game/: .gitignore  Makefile  compile_commands.json  drm_game.c
linux_egl_gbm/: .gitignore  Makefile  egl.c  shaders.c  shaders.h
ocaml/lwt/: .ocamlinit  dune-project
ocaml/lwt/src/: .merlin  dune  main.ml
ocaml/pipes/: dune-project
ocaml/pipes/src/: .merlin  dune  main.ml
ocaml/sockets/: .merlin  dune-project
ocaml/sockets/client/: .merlin  client.ml  dune
ocaml/sockets/server/: .merlin  dune  server.ml
opengl/: TODO.md
opengl/3d_coordinates/src/: main.cpp
opengl/camera_experiments/: CMakeLists.txt  run
opengl/camera_experiments/include/glad/: CMakeLists.txt
opengl/camera_experiments/shaders/: fragment.glsl  vertex.glsl
opengl/camera_experiments/src/: camera.h  main.cpp  textures.cpp  textures.h  window.cpp
opengl/early_practice/src/: main.cpp  shaders.cpp
opengl/experiments/: CMakeLists.txt
opengl/experiments/shaders/: vertex.glsl
opengl/experiments/src/: camera.cpp  main.cpp  shaders.cpp  shaders.h  textures.cpp  window.cpp  window.h
opengl/getting_started/: CMakeLists.txt  main.cpp  vertex_shader.glsl
opengl/getting_started/include/glad/src/: glad.c
opengl/practice_1/include/glad/include/glad/: glad.h
opengl/practice_1/shaders/: fragment.glsl  vertex.glsl
opengl/practice_1/src/: main.cpp
opengl/transformations/: run
opengl/transformations/shaders/: fragment.glsl  vertex.glsl
opengl/transformations/src/: main.cpp
rust/functions/: Cargo.toml
rust/functions/src/: main.rs
rust/guessing_game/: Cargo.toml
rust/guessing_game/src/: main.rs
rust/hello_world/: Cargo.toml
rust/hello_world/src/: main.rs
rust/restaurant/: Cargo.toml
rust/restaurant/src/: lib.rs
rust/variables/: Cargo.toml
skia_rust/: Cargo.toml
skia_rust/src/: main.rs
skia_rust_glfw/: Cargo.toml
skia_rust_glfw/src/: main.rs
wayland/wlroots_experiments/: .gitignore  Makefile
wayland/wlroots_experiments/src/: compositor.c  compositor_first_steps.c
windows/opengl_window/: opengl_window.sln
windows/opengl_window/opengl_window/: .clang-format  PropertySheet.props  main.c  opengl_window.vcxproj  opengl_window.vcxproj.filters
