[package]
name = "skia"
version = "0.1.0"
authors = ["Taylon Silva <taylonsilva@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
gl = ["skia-safe/gl"]

[dependencies]
skia-safe = "0"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
